--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-jsbeautifier": "^0.2.7",
     "mocha": "^2.1.0"
+  },
+  "dependencies": {
+    "is_null_or_undefined": "git://github.com/nathanfaucett/is_null_or_undefined"
   }
 }
