--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "npm run node-test",
+    "node-test": "node ./test/index.js | ./node_modules/.bin/tap-spec",
+    "browser-test": "zuul -- ./test/index.js",
+    "browser-test-local": "zuul --local 8080 ./test/index.js"
   },
   "keywords": [
     "is_text_input_element",
@@ -21,10 +24,12 @@
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-jsbeautifier": "^0.2.7",
-    "mocha": "^2.1.0"
+    "tape": "^4.0.0",
+    "tap-spec": "^4.0.0",
+    "zuul": "^3.0.0"
   },
   "dependencies": {
-    "is_null_or_undefined": "git://github.com/nathanfaucett/is_null_or_undefined",
-    "index_of": "git://github.com/nathanfaucett/index_of"
+    "is_null_or_undefined": "git://github.com/nathanfaucett/is_null_or_undefined.git",
+    "index_of": "git://github.com/nathanfaucett/index_of.git"
   }
 }
