--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "is_text_input_element.js"
   ],
   "author": "Nathan Faucett",
-  "license": "BSD-2-Clause",
+  "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -29,7 +29,6 @@
     "zuul": "^3.0.0"
   },
   "dependencies": {
-    "is_null_or_undefined": "git://github.com/nathanfaucett/is_null_or_undefined.git",
-    "index_of": "git://github.com/nathanfaucett/index_of.git"
+    "is_null_or_undefined": "git://github.com/nathanfaucett/is_null_or_undefined.git"
   }
 }
