--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "is_text_input_element",
+  "name": "@nathanfaucett/is_text_input_element",
   "version": "0.0.1",
-  "description": "is_text_input_element for the browser and node.js",
+  "description": "checks if value is a text input element",
   "repository": {
     "type": "git",
     "url": "https://github.com/nathanfaucett/is_text_input_element.git"
@@ -11,7 +11,7 @@
     "test": "npm run node-test",
     "node-test": "node ./test/index.js | ./node_modules/.bin/tap-spec",
     "browser-test": "zuul -- ./test/index.js",
-    "browser-test-local": "zuul --local 8080 ./test/index.js"
+    "browser-test-local": "zuul --local 9999 ./test/index.js"
   },
   "keywords": [
     "is_text_input_element",
@@ -21,14 +21,14 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-jsbeautifier": "^0.2.7",
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-jsbeautifier": "^0.2.13",
     "tape": "^4.0.0",
     "tap-spec": "^4.0.0",
     "zuul": "^3.0.0"
   },
   "dependencies": {
-    "is_null_or_undefined": "git://github.com/nathanfaucett/is_null_or_undefined.git"
+    "@nathanfaucett/is_null_or_undefined": "0.0.1"
   }
 }
